# igarss-mcp-server

./: README.md  pyproject.toml
src/: client.py  server.py
static/: style.css
tests/: test_scraper.py
