[project]
name = "igarss-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.28",
    "mcp-use>=1.3.8",
    "mcp[cli]>=1.12.3",
    "ollmcp>=0.16.0",
    "requests>=2.32.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]
